fixing layout issues, and update content

--- a/src/pages/ContactScreen.module.css
+++ b/src/pages/ContactScreen.module.css
@@ -1,5 +1,12 @@
 .container {
   width: 100%;
+  min-height: calc(100vh - 140px);
+  margin-top: 100px;
+  padding: 0 calc((100vw - 1200px) / 2);
+}
+
+.content-card {
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -95,6 +102,9 @@
 
 @media (max-width: 768px) {
   .container {
+    padding: 0 50px;
+  }
+  .content-card {
     grid-template-columns: 1fr;
   }
   .input-group {
